examples/55-gateway-api-with-dns.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    dns.gardener.cloud/dnsnames: '*'
    #dns.gardener.cloud/ttl: "500"
    # If you are delegating the DNS Management to Gardener, uncomment the following line (see https://gardener.cloud/documentation/guides/administer_shoots/dns_names/)
    #dns.gardener.cloud/class: garden
    # To temporarily skip reconciliation of created entries
    #dns.gardener.cloud/ignore: "reconcile" # or "true"
    # To skip reconciliation and cleanup of DNS records on deletion
    #dns.gardener.cloud/ignore: "full"
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: my-gateway-class
  listeners:
    - allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      hostname: foo.example.com
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: foo-example-com
        mode: Terminate
